--- a/forma.html
+++ b/forma.html
@@ -1,10 +1,11 @@
+<meta charset="Utf-8">
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form action="ctrl.php" sethod="post"> 
+ <form action="ctrl.php" method="post">
 <div class="login">
   <div class="login-triangle"></div>
   
